# ais-dev2il-mlops-sales-forecasting

./: .gitignore  Dockerfile  README.md  build-image.sh  pyproject.toml  run-api-container.sh
deploy/airflow/: airflow.yaml
deploy/airflow/dags/: sales-forecasting-training.py
deploy/k8s/: download-latest-sales-data-job.yaml  sales-forecasting-api.yaml  train-store-1-model-job.yaml  train-store-2-model-job.yaml  train-store-3-model-job.yaml  train-store-4-model-job.yaml  train-store-model-job.yaml
deploy/mlflow/: mlflow-server.yaml
notebooks/: sales-forecasting.ipynb
sales_forecasting/: api.py  cli.py  train.py
