[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ais-dev2il-mlops-sales-forecasting"
version = "1.0.1"
requires-python = ">=3.13.0"
dependencies = [
    "pandas==2.2.3",
    "prophet==1.1.6",
    "mlflow==2.22.0",
    "click==8.1.8",
    "fastapi[standard]==0.115.12"
]

[project.optional-dependencies]
dev = [
    "ipykernel==6.29.5",
    "notebook==7.3.3",
    "matplotlib==3.10.1"
]
test = [
    "pytest==8.3.5"
]

[tool.setuptools]
packages = ["sales_forecasting"]
include-package-data = true

[project.scripts]
download-latest-sales-data = "sales_forecasting.cli:download_latest_sales_data"
train-store-model = "sales_forecasting.cli:train_store_model"

[tool.setuptools.package-data]
"sales_forecasting" = ["latest_sales_data.csv"]
